show live streamers from a list
next: show offline streamer cards, filter live/offline/closed

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -2,6 +2,7 @@ $icon-font-path: '../fonts/';
 
 // bower:scss
 @import "bower_components/bootstrap-sass/assets/stylesheets/_bootstrap.scss";
+@import "bower_components/materialize/sass/materialize.scss";
 // endbower
 
 .browserupgrade {
@@ -70,7 +71,7 @@ body {
 /* Responsive: Portrait tablets and up */
 @media screen and (min-width: 768px) {
   .container {
-    max-width: 730px;
+    //max-width: 730px;
   }
 
   /* Remove the padding we set earlier */
