--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -68,6 +68,14 @@ body {
   }
 }
 
+.inline-toggle{
+  display: inline-flex;
+}
+
+.main-text, a{
+  color: #6441A5;
+}
+
 /* Responsive: Portrait tablets and up */
 @media screen and (min-width: 768px) {
   .container {
